# hacs-integration

./: README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml
custom_components/tewke/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  fan.py  light.py  manifest.json  number.py  repairs.py  scene.py  sensor.py  strings.json  switch.py  target.py  util.py
custom_components/tewke/translations/: en.json
