[project]
name = "hacs-integration"
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2026.3.2",
    "ruff>=0.15.7",
    "pytewke@git+ssh://git@gitlab.com/tewke/open-source/pytewke.git@dc4a9f810f8abfe9d69ef4d5159a73604235b15c",
    "voluptuous>=0.15.2",
]
